pxc/tests/test_01_px/constinh2.px
namespace constinh2;
import test_common "";


threaded interface ifoo {
  function int mfoo(long v) const;
}

threaded struct sfoo : ifoo : {
  function int mfoo(long v) { // error: constness
    return 3 + v;
  }
}

ptr{sfoo} p = ptr{sfoo}(sfoo());
ptr{ifoo} ip = p;
println(ip->mfoo(3));

